Update and rename HOVNO.html to Contac.html

--- a/projekt1/Contac.html
+++ b/projekt1/Contac.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="MAIN.html">Úvod</a></li>
                 <li><a href="TURBO%20MRDKA.html">O nás</a></li>
-                <li><a href="HOVNO.html">Kontakt</a></li>
+                <li><a href="Contac.html">Kontakt</a></li>
             </ul>
         </div>
     </nav>
