--- a/projekt1/About.html
+++ b/projekt1/About.html
@@ -12,8 +12,8 @@
             <div id="logo"><a href="../index.html">Serato DJ Software</a></div>
             <ul>
                 <li><a href="MAIN.html">Úvod</a></li>
-                <li><a href="TURBO MRDKA.html">O nás</a></li>
-                <li><a href="HOVNO.html">Kontakt</a></li>
+                <li><a href="About.html">O nás</a></li>
+                <li><a href="Contac.html">Kontakt</a></li>
             </ul>
         </div>
     </nav>
