--- a/Projekt_1/contact.html
+++ b/Projekt_1/contact.html
@@ -10,9 +10,9 @@
 <header>
     <nav id="navbar">
         <div class="container">
-            <div id="logo"><a href="MAIN.html">SERATO DJ</a></div>
+            <div id="logo"><a href="index.html">SERATO DJ</a></div>
             <ul>
-                <li><a  href="MAIN.html">Úvod</a></li>
+                <li><a  href="index.html">Úvod</a></li>
                 <li><a  href="about.html">O nás</a></li>
                 <li><a class="current" href="contact.html">Kontakt</a></li>
             </ul>
