--- a/Projekt_1/about.html
+++ b/Projekt_1/about.html
@@ -10,9 +10,9 @@
 <header>
   <nav id="navbar">
     <div class="container">
-      <div id="logo"><a href="MAIN.html">SERATO DJ</a></div>
+      <div id="logo"><a href="index.html">SERATO DJ</a></div>
       <ul>
-        <li><a  href="MAIN.html">Úvod</a></li>
+        <li><a  href="index.html">Úvod</a></li>
         <li><a class="current" href="about.html">O nás</a></li>
         <li><a href="contact.html">Kontakt</a></li>
       </ul>
@@ -28,17 +28,17 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab dolorem doloremque fugit magni natus praesentium quae quaerat repellendus sint voluptas.</p>
     </div>
     <div class="info-right">
-      <img src="../css/img/serato%20logo.png" alt="kayle">
+      <img src="css/img/serato%20logo.png" alt="SERATO">
     </div>
   </div>
 </section>
 <section id="testimonials" class="py-3">
   <div class="container">
     <h2 class="l-heading">Co o nás říkají naši zákazníci</h2>
-    <div class="testimonial bg-primary"><img src="../css/img/Gfbp.png" alt="ja">
+    <div class="testimonial bg-primary"><img src="css/img/Gfbp.png" alt="ja">
       <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam consectetur delectus ducimus eum, ipsam molestiae, mollitia nam nulla optio perferendis quis voluptatibus. Accusantium aperiam commodi ea nemo tenetur, ut.</p></div>
   </div>
-  <div class="testimonial bg-primary"><img src="../css/img/unknown.png" alt="darius">
+  <div class="testimonial bg-primary"><img src="css/img/unknown.png" alt="ŠTEFAN">
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis corporis libero necessitatibus omnis placeat reiciendis reprehenderit tempora unde ut, velit vero voluptates? Dicta eius error impedit molestias nihil non porro.</p></div>
 
 </section>
