--- a/Projekt_1/index.html
+++ b/Projekt_1/index.html
@@ -10,7 +10,7 @@
 <header>
     <nav id="navbar">
         <div class="container">
-            <div id="logo"><a href="MAIN.html">SERATO DJ</a></div>
+            <div id="logo"><a href="index.html">SERATO DJ</a></div>
             <ul>
                 <li><a class="current" href="../index.html">Úvod</a></li>
                 <li><a href="about.html">O nás</a></li>
